--- a/task2.ipynb
+++ b/task2.ipynb
@@ -1,53 +1,51 @@
-Условие:
-Испокон веков в королевстве магов проходит турнир заклинаний. На нем они представляют свои лучшие наработки за весь год.
-И недавно вновь прошла такая встреча, на которой каждый маг представил свои уникальные заклинания. 
-Вам нужно создать словарь, в котором ключами будут имена магов, а значениями — списки их заклинаний. 
-После этого вам нужно узнать, какие заклинания использует конкретный маг.
-
-Формат ввода:  
-• Первая строка содержит целое число n (1 ≤ n ≤ 100) — количество магов.
-• Далее следуют n строк, каждая из которых содержит имя мага и его заклинания, разделенные запятыми.
-• Последняя строка содержит имя мага для запроса.
-
-Формат вывода:  
-• Если маг найден, вывести его заклинания через запятую.
-• Если маг не найден, вывести сообщение "Маг не найден".
-
-Тесты:
-Тест 1:
-Ввод:
-3
-Гарри, огненный шар, ледяная стрела
-Луна, невидимость, светлячок
-Сириус, превращение
-Гарри
-
-Вывод:
-огненный шар, ледяная стрела
-
-Тест 2:
-Ввод:
-2
-Дамблдор, телепортация, защита
-Волдеморт, проклятие, невидимость
-Гриндевальд
-
-Вывод:
-Маг не найден
-
-Решение:
-n = int(input())
-magicians = {}
-
-for _ in range(n):
-    entry = input().strip()
-    name, *spells = entry.split(", ")
-    magicians[name] = spells
-
-mag = input().strip()
-
-if mag in magicians:
-    print(", ".join(magicians[mag]))
-else:
-    print("Маг не найден")
-
+{
+  "description": "Испокон веков в королевстве магов проходит турнир заклинаний. На нем они представляют свои лучшие наработки за весь год. И недавно вновь прошла такая встреча, на которой каждый маг представил свои уникальные заклинания.",
+  "task": {
+    "input_format": {
+      "n": "Целое число (1 ≤ n ≤ 100) — количество магов.",
+      "magicians": "n строк, каждая из которых содержит имя мага и его заклинания, разделенные запятыми.",
+      "query": "Имя мага для запроса."
+    },
+    "output_format": {
+      "found": "Если маг найден, вывести его заклинания через запятую.",
+      "not_found": "Если маг не найден, вывести сообщение 'Маг не найден'."
+    },
+    "tests": [
+      {
+        "input": [
+          "3",
+          "Гарри, огненный шар, ледяная стрела",
+          "Луна, невидимость, светлячок",
+          "Сириус, превращение",
+          "Гарри"
+        ],
+        "output": "огненный шар, ледяная стрела"
+      },
+      {
+        "input": [
+          "2",
+          "Дамблдор, телепортация, защита",
+          "Волдеморт, проклятие, невидимость",
+          "Гриндевальд"
+        ],
+        "output": "Маг не найден"
+      }
+    ],
+    "solution": [
+      "n = int(input())",
+      "magicians = {}",
+      "",
+      "for _ in range(n):",
+      "    entry = input().strip()",
+      "    name, *spells = entry.split(", ")",
+      "    magicians[name] = spells",
+      "",
+      "mag = input().strip()",
+      "",
+      "if mag in magicians:",
+      "    print(", ".join(magicians[mag]))",
+      "else:",
+      "    print("Маг не найден")"
+    ]
+  }
+}
