--- a/task2.ipynb
+++ b/task2.ipynb
@@ -1,51 +1,53 @@
 {
-  "description": "Испокон веков в королевстве магов проходит турнир заклинаний. На нем они представляют свои лучшие наработки за весь год. И недавно вновь прошла такая встреча, на которой каждый маг представил свои уникальные заклинания.",
-  "task": {
-    "input_format": {
-      "n": "Целое число (1 ≤ n ≤ 100) — количество магов.",
-      "magicians": "n строк, каждая из которых содержит имя мага и его заклинания, разделенные запятыми.",
-      "query": "Имя мага для запроса."
-    },
-    "output_format": {
-      "found": "Если маг найден, вывести его заклинания через запятую.",
-      "not_found": "Если маг не найден, вывести сообщение 'Маг не найден'."
-    },
-    "tests": [
-      {
-        "input": [
-          "3",
-          "Гарри, огненный шар, ледяная стрела",
-          "Луна, невидимость, светлячок",
-          "Сириус, превращение",
-          "Гарри"
+    "description": "Испокон веков в королевстве магов проходит турнир заклинаний. На нем они представляют свои лучшие наработки за весь год. И недавно вновь прошла такая встреча, на которой каждый маг представил свои уникальные заклинания.",
+    "task": {
+        "input_format": {
+            "n": "Целое число (1 ≤ n ≤ 100) — количество магов.",
+            "magicians": "n строк, каждая из которых содержит имя мага и его заклинания, разделенные запятыми.",
+            "query": "Имя мага для запроса."
+        },
+        "output_format": {
+            "found": "Если маг найден, вывести его заклинания через запятую.",
+            "not_found": "Если маг не найден, вывести сообщение 'Маг не найден'."
+        },
+        "tests": [
+            {
+                "input": [
+                    "3",
+                    "Гарри, огненный шар, ледяная стрела",
+                    "Луна, невидимость, светлячок",
+                    "Сириус, превращение",
+                    "Гарри"
+                ],
+                "output": "огненный шар, ледяная стрела"
+            },
+            {
+                "input": [
+                    "2",
+                    "Дамблдор, телепортация, защита",
+                    "Волдеморт, проклятие, невидимость",
+                    "Гриндевальд"
+                ],
+                "output": "Маг не найден"
+            }
         ],
-        "output": "огненный шар, ледяная стрела"
-      },
-      {
-        "input": [
-          "2",
-          "Дамблдор, телепортация, защита",
-          "Волдеморт, проклятие, невидимость",
-          "Гриндевальд"
-        ],
-        "output": "Маг не найден"
-      }
-    ],
-    "solution": [
-      "n = int(input())",
-      "magicians = {}",
-      "",
-      "for _ in range(n):",
-      "    entry = input().strip()",
-      "    name, *spells = entry.split(", ")",
-      "    magicians[name] = spells",
-      "",
-      "mag = input().strip()",
-      "",
-      "if mag in magicians:",
-      "    print(", ".join(magicians[mag]))",
-      "else:",
-      "    print("Маг не найден")"
-    ]
-  }
+        "solution": [
+            "n = int(input())",
+            "magicians = {}",
+            "",
+            "for _ in range(n):",
+            "    entry = input().strip()",
+            "    name, *spells = entry.split(",
+            ")",
+            "    magicians[name] = spells",
+            "",
+            "mag = input().strip()",
+            "",
+            "if mag in magicians:",
+            "    print(",
+            ".join(magicians[mag]))",
+            "else:",
+            "    print('Маг не найден')"
+        ]
+    }
 }
