--- a/task2.ipynb
+++ b/task2.ipynb
@@ -52,26 +52,21 @@
         }
       ],
       "source": [
-        "anna = {\n",
-        "    'фильмы': 4,\n",
-        "    'названия_фильмов': {'Фильм1', 'Фильм2', 'Фильм3', 'Фильм4'}\n",
-        "}\n",
+        "n = int(input())\n",
+        "magicians = {}\n",
+        "for _ in range(n):\n",
         "\n",
-        "sergey = {\n",
-        "    'фильмы': 5,\n",
-        "    'названия_фильмов': {'Фильм3', 'Фильм4', 'Фильм5', 'Фильм6', 'Фильм7'}\n",
-        "}\n",
+        "    entry = input().strip()\n",
+        "    name, *spells = entry.split(", ")\n",
+        "    magicians[name] = spells\n",
         "\n",
-        "user_movies_anna = input(\"Введите названия фильмов Анны через запятую: \").split(',')\n",
-        "user_movies_sergey = input(\"Введите названия фильмов Сергея через запятую: \").split(',')\n",
+        "mag = input().strip()\n",
         "\n",
-        "user_movies_anna = set(movie.strip() for movie in user_movies_anna)\n",
-        "user_movies_sergey = set(movie.strip() for movie in user_movies_sergey)\n",
-        "\n",
-        "common_movies = user_movies_anna & user_movies_sergey\n",
-        "\n",
-        "print(\"Общие фильмы:\", *common_movies)\n",
-        "print(\"Количество общих фильмов:\", len(common_movies))"
+        "if mag in magicians:\n",
+        "    print(", ".join(magicians[mag]))\n",
+        "else:\n",
+        "    print("Маг не найден")\n",
+        
       ]
     },
     {
