--- a/task2.ipynb
+++ b/task2.ipynb
@@ -65,7 +65,7 @@
         "if mag in magicians:\n",
         "    print(", ".join(magicians[mag]))\n",
         "else:\n",
-        "    print("Маг не найден")\n"
+        "    print('Маг не найден')\n"
         
       ]
     },
