--- a/task2.ipynb
+++ b/task2.ipynb
@@ -107,35 +107,49 @@
     {
       "cell_type": "code",
       "source": [
+        "n = int(input())\n",
+        "boys_interests = []\n",
         "\n",
+        "for _ in range(n):\n",
+        "    interest = input().strip()\n",
+        "    boys_interests.append(interest)\n",
         "\n",
+        "m = int(input())\n",
+        "girls_interests = []\n",
         "\n",
+        "for _ in range(m):\n",
+        "    interest = input().strip()\n",
+        "    girls_interests.append(interest)\n",
         "\n",
+        "priority = {}\n",
         "\n",
+        "for interest in boys_interests:\n",
+        "    if interest in priority:\n",
+        "        priority[interest][0] += 1\n",
+        "    else:\n",
+        "        priority[interest] = [1, 0]\n",
         "\n",
+        "for interest in girls_interests:\n",
+        "    if interest in priority:\n",
+        "        priority[interest][1] += 1 \n",
+        "    else:\n",
+        "        priority[interest] = [0, 1]\n",
         "\n",
+        "common_interests = []\n",
         "\n",
+        "for interest, counts in priority.items():\n",
+        "    if counts[0] > 0 and counts[1] > 0: \n",
+        "        common_interests.append((interest, counts[0] + counts[1])) \n",
+        "common_interests.sort(key=lambda x: x[1], reverse=True)\n",
+        "\n",
+        "if common_interests:\n",
+        "    result = [interest for interest, _ in common_interests]\n",
+        "    print(", ".join(result))\n",
+        "else:\n",
+        "    print("Нет общих интересов")\n",
         "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "id": "V8ZtOMzpUHhY",
-        "outputId": "0a00d84f-f8f4-46f6-aa1d-e17606eb159f"
-      },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Введите названия книг Ольги через запятую: Чиполлино, В поисках синего\n",
-            "Введите названия книг Дмитрия через запятую: Чиполлино, Вестник, В поисках синего\n",
-            "Всего книг: 5\n",
-            "Общие книги: В поисках синего Чиполлино\n",
-            "Количество общих книг: 2\n"
+      ]
+      
           ]
         }
       ]
