--- a/task2.ipynb
+++ b/task2.ipynb
@@ -302,11 +302,10 @@
                 "    print(",
                 ".join(result))\n",
                 "else:\n",
-                "    print('Нет общих интересов')\n",
-                "\n"
-            ]
-        }
-      ]
+                "    print('Нет общих интересов')\n"
+                ]
+            }
+        ]
     }
-  ]
+]
 }
